--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -57,6 +57,10 @@
 }
 
 @media(max-width: 840px){
+    .homepageContainer {
+        margin-top: 0;
+    }
+
     .homepageContainer > div > span {
         font-size: 42px;
     }
