--- a/src/layout/Layout.module.css
+++ b/src/layout/Layout.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     width: 100vw;
+
+    background-color: var(--primary-darker);
 }
 
 .contentContainer{
@@ -10,4 +12,6 @@
     width: 100%;
     height: 100vh;
     max-width: 1440px;
+
+    background-color: #FFF;
 }
