--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,6 +17,19 @@
     display: none;
 }
 
+.logoutButton{
+    border: none;
+    border-radius: 4px;
+
+    background-color: #FFF;
+    color: var(--primary-color);
+
+    padding: 12px 16px;
+
+    font-weight: 700;
+    font-size: 1rem;
+}
+
 .nav {
     display: flex;
     align-items: center;
