--- a/src/components/Modal/index.module.css
+++ b/src/components/Modal/index.module.css
@@ -27,6 +27,21 @@
     font-weight: 500;
 }
 
+.modalContainer > button {
+    position: absolute;
+    right: 48px;
+    top: 48px;
+
+    background: transparent;
+    color: var(--warning);
+    border: none;
+}
+
+.modalContainer > button > svg {
+    height: 20px;
+    width: 20px;
+}
+
 .form{
     display: flex;
     flex-direction: column;
