Rendering the updated chat messages

--- a/src/components/MyChatsMessages/MyChatsMessages.module.css
+++ b/src/components/MyChatsMessages/MyChatsMessages.module.css
@@ -31,7 +31,7 @@
     border-radius: 4px    
 }
 
-.message:nth-child(odd){
+.message:nth-child(odd):not(.messageSender){
     color: var(--primary-darker);
     background-color: transparent;
     border: 1px solid var(--primary-darker)
