--- a/src/components/MyChatsMessageSender/index.module.css
+++ b/src/components/MyChatsMessageSender/index.module.css
@@ -42,3 +42,8 @@
     font-size: 1rem;
     font-weight: 700;
 }
+
+.messageSenderContainer > button:disabled{
+    cursor: not-allowed;
+    opacity: .8;
+}
