--- a/src/components/MyChatsSidebar/MyChatsSidebar.module.css
+++ b/src/components/MyChatsSidebar/MyChatsSidebar.module.css
@@ -5,6 +5,44 @@
 
     width: 100%;
     max-width: 400px;
+    max-height: calc(100vh - 100px);
 
     border-right: 1px solid rgba(16,120,194,0.4);
+
+    overflow-y: auto;
+}
+
+.sidebar > button{
+    display: block;
+
+    color: var(--primary-color);
+    background-color: transparent;
+
+    border: none;
+
+    margin-left: auto;
+    margin-bottom: .5rem;
+}
+
+.sidebar > button > svg{
+    width: 20px;
+    height: 20px;
+}
+
+@media(max-width: 1024px){
+    .sidebar {
+        position: absolute;
+        transform: translateX(-100%);
+
+        background-color: #FFF;
+
+
+        padding: 16px;
+
+        z-index: 1
+    }
+
+    .active {
+        transform: translateX(0);
+    }
 }
