--- a/src/components/MyChatsMessageSender/index.module.css
+++ b/src/components/MyChatsMessageSender/index.module.css
@@ -47,3 +47,15 @@
     cursor: not-allowed;
     opacity: .8;
 }
+
+@media(max-width: 460px){
+    .messageSenderContainer > button > span {
+        display: none
+    }
+
+    .messageSenderContainer > input{
+        max-width: 80%;
+
+        padding: 6px 8px;
+    }
+}
